# surebet

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  PLAN.md  docker-compose.yml  surebet.toml
docs/: index.html  tailwind.css
docs/assets/dioxus/: surebet-wasm.js  surebet-wasm_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
src/: lib.rs  main.rs
src/anomaly/: mod.rs
src/arb/: executor.rs  maker.rs  mod.rs
src/auth/: mod.rs
src/config/: mod.rs
src/crossbook/: fetcher.rs  matcher.rs  mod.rs
src/dashboard/: mod.rs
src/feeds/: aggregator.rs  binance.rs  coinbase.rs  mod.rs
src/harvester/: mod.rs
src/lifecycle/: mod.rs
src/maker/: mod.rs
src/market/: mod.rs
src/metrics/: mod.rs
src/onchain/: abi.rs  cache.rs  mod.rs  monitor.rs  types.rs
src/orderbook/: mod.rs
src/sniper/: executor.rs  mod.rs  sources.rs
src/split/: executor.rs  mod.rs
src/store/: mod.rs
src/weather/: forecast.rs  metar.rs  mod.rs  strategy.rs  wunderground.rs
src/ws/: clob.rs  mod.rs  rtds.rs
