[package]
name = "surebet"
version = "0.2.0"
authors = ["Sam Davies <sam@uown.co>"]
edition = "2021"
description = "Polymarket WebSocket trading engine for prediction market arbitrage"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP client for REST API
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto (for HMAC auth signing)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# Data structures
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
toml = "0.8"
dotenvy = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

# Misc
url = "2"
uuid = { version = "1", features = ["v4"] }

# Polymarket SDK (official)
polymarket-client-sdk = { version = "0.4", features = ["gamma", "clob", "ws", "rtds", "data", "tracing", "ctf"] }
futures = "0.3"

# TLS — the SDK's WS client needs a rustls CryptoProvider installed
rustls = { version = "0.23", features = ["ring"] }

# State store (Valkey/Redis)
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# Dashboard HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# On-chain event monitoring (Polygon/EVM)
alloy = { version = "1", features = ["provider-ws", "provider-http", "rpc-types-eth"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

[[bin]]
name = "event_chronology"
path = "src/bin/event_chronology.rs"

[[bin]]
name = "harvester"
path = "src/bin/harvester.rs"

[[bin]]
name = "harvester_dash"
path = "src/bin/harvester_dash.rs"
